# web-chat

./: .env.example  .gitignore  DEPLOYMENT.md  PROJECT_CHECKLIST.md  README.md  USAGE.md  claude.md  deploy.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  project.md  server-post-deploy.sh  server-setup.sh  start.bat  test-gemini-sdk.html  test-gemini-tts.html  user_rules.md  vite.config.js  vitest.config.js  口语练习页面Local-First语音缓存优化-根因分析与执行计划.md  口语练习页面Local-First语音缓存优化.md
.cargo/: config.toml
.codebuddy/: analysis-summary.json
back-server/: test-gmini.sh
cf-worker/gemini-proxy/: README.md  wrangler.toml
deploy-temp/: README.md  package.json
discuss/: local-first-tts-cache-todos.md
docs/: cache-optimization-analysis.md  practice-local-first-todos.md
scripts/: dev.sh
server/: index.js  package-lock.json  package.json
server/models/: database.js
server/services/: speechServices.js
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gemini_service.rs  lib.rs  main.rs
src/LocalFirst/: README.md  index.js
src/components/: AITutorFeedback.jsx  GeminiSettings.jsx  Header.jsx  Sidebar.jsx
src/lib/: hash.js  hash.test.js  ttsCacheDao.memory.js  ttsCacheDao.sqlite.js  ttsCacheDao.sqlite.test.js  ttsCacheDao.test.js
src/pages/: Home.jsx  Practice.jsx  PracticeEnhanced.jsx  Progress.jsx  Settings.jsx
src/services/: observabilityManager.js  ttsCacheService.js  ttsWithCache.js  ttsWithCache.test.js
src/store/: useAppStore.js
src/styles/: App.css  index.css
src/test/: setup.js  (+1 more)
types/: api.ts
(+19 files in other folders)
