[package]
name = "ai-speech-practice"
version = "0.1.0"
description = "AI口语练习产品"
authors = ["you"]
license = ""
repository = ""
default-run = "ai-speech-practice"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "global-shortcut-all", "dialog-open", "shell-open", "notification-all", "fs-create-dir", "fs-read-file", "protocol-asset", "fs-read-dir", "fs-remove-dir", "fs-copy-file", "fs-rename-file", "http-all", "dialog-save", "fs-write-file", "fs-remove-file", "path-all", "fs-exists", "window-set-content-protected"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
